crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_workspace_files__coffee_definitions.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
expression: bundle
---
{
  "request": {
    "max_depth": 2,
    "root": "<WS>/examples/the-book-corpus/coffee-machine"
  },
  "response": {
    "entries": [
      {
        "name": "actions.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/actions.sysml",
        "type": "file"
      },
      {
        "name": "book-views.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/book-views.sysml",
        "type": "file"
      },
      {
        "name": "brew-cycle-flow.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/brew-cycle-flow.sysml",
        "type": "file"
      },
      {
        "name": "calculations.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/calculations.sysml",
        "type": "file"
      },
      {
        "name": "connections.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/connections.sysml",
        "type": "file"
      },
      {
        "name": "definitions.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/definitions.sysml",
        "type": "file"
      },
      {
        "name": "demo-analysis.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/demo-analysis.sysml",
        "type": "file"
      },
      {
        "name": "flows.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/flows.sysml",
        "type": "file"
      },
      {
        "name": "metadata.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/metadata.sysml",
        "type": "file"
      },
      {
        "name": "orchestration.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/orchestration.sysml",
        "type": "file"
      },
      {
        "name": "package-structure.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/package-structure.sysml",
        "type": "file"
      },
      {
        "name": "ports-and-interfaces.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/ports-and-interfaces.sysml",
        "type": "file"
      },
      {
        "name": "requirements.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/requirements.sysml",
        "type": "file"
      },
      {
        "name": "states.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/states.sysml",
        "type": "file"
      },
      {
        "name": "typing-and-specialization.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/typing-and-specialization.sysml",
        "type": "file"
      },
      {
        "name": "views.sysml",
        "path": "<WS>/examples/the-book-corpus/coffee-machine/views.sysml",
        "type": "file"
      }
    ],
    "root": "<WS>/examples/the-book-corpus/coffee-machine"
  }
}
